# ghostwatcher

./: README.md  pyproject.toml
ghostwatcher/: extraction.py  main.py  types.py
scripts/: ghostwatcher
