[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostwatcher"
version = '0.0.0'
description = "Multimodal AI powered video description and commentary."
authors = [
    { name = "Marius Gerdes", email = "integr@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "pydantic",
    "shutils",
    "ghostbox"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"

[tool.setuptools]
packages = ["ghostwatcher"]
package-data = { "ghostwatcher" = ["data/**"] }
script-files = ["scripts/ghostwatcher"]

[project.urls]
"Homepage" = "https://github.com/mglambda/ghostwatcher"
